--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
       <div class="container">
         <h2 class="works__title title text-center">My Works</h2>
         <div class="row">
-          <div class="col-xl-3">
+          <div class="col-xl-3 mb-4 mb-xl-0">
             <div class="list-group works__list" id="list-tab" role="tablist">
               <a class="list-group-item list-group-item-action works__list-link active" id="list-nike-list"
                 data-bs-toggle="list" href="#list-nike" role="tab" aria-controls="list-nike">nike</a>
@@ -261,7 +261,8 @@
                 </div>
               </div>
               <div class="tab-pane fade works__tab" id="list-airpods" role="tabpanel"
-                aria-labelledby="list-airpods-list">  <div class="row">
+                aria-labelledby="list-airpods-list">
+                <div class="row">
                   <div class="col-xl-3">
                     <img src="img/Boulevard market.png" alt="" class="works__tab-img w-100 h-100">
                   </div>
@@ -275,9 +276,11 @@
                       This is everything that a user sees when opening a web page and with which he interacts.</p>
                     <a href="#!" class="works__tab-btn all-btn">details</a>
                   </div>
-                </div></div>
+                </div>
+              </div>
               <div class="tab-pane fade works__tab" id="list-street88" role="tabpanel"
-                aria-labelledby="list-street88-list">  <div class="row">
+                aria-labelledby="list-street88-list">
+                <div class="row">
                   <div class="col-xl-3">
                     <img src="img/Street88.png" alt="" class="works__tab-img w-100 h-100">
                   </div>
@@ -291,9 +294,11 @@
                       This is everything that a user sees when opening a web page and with which he interacts.</p>
                     <a href="#!" class="works__tab-btn all-btn">details</a>
                   </div>
-                </div></div>
+                </div>
+              </div>
               <div class="tab-pane fade works__tab" id="list-cinemas" role="tabpanel"
-                aria-labelledby="list-cinemas-list">  <div class="row">
+                aria-labelledby="list-cinemas-list">
+                <div class="row">
                   <div class="col-xl-3">
                     <img src="img/Vue Cinemas.png" alt="" class="works__tab-img w-100 h-100">
                   </div>
@@ -307,13 +312,34 @@
                       This is everything that a user sees when opening a web page and with which he interacts.</p>
                     <a href="#!" class="works__tab-btn all-btn">details</a>
                   </div>
-                </div></div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
+      </div>
     </section>
   </main>
-
+   <footer class="footer">
+     <div class="container">
+       <div class="row">
+       <div class="col-xl-6 text-center ms-auto">
+         <div class="footer__box-big d-flex flex-column align-items-center">
+         <a href="#!"><img src="img/svg/logo-light.svg" alt="" class="footer__logo-img"></a>
+         <div class="footer__box d-flex flex-wrap justify-content-center justify-content-xl-evenly">
+           <a href="#!" class="footer__box-link">About Me</a>
+           <a href="#!" class="footer__box-link">Works</a>
+           <a href="#!" class="footer__box-link">Contacts</a>
+         </div>
+         <div class="footer__boxx d-flex flex-wrap justify-content-center justify-content-xl-between">
+          <a href="tel:99-819-75-20" class="footer__box-link">(99) 819-75-20</a>
+          <a href="mailto:ismoilkabulov2@gmail.com" class="footer__box-link">Ismaoil Kabulov @gmail.com</a>
+        </div>
+         </div>
+       </div>
+     </div>
+    </div>
+   </footer>
   <script src="libs/bootstrap.js"></script>
 </body>
 
