--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
          </div>
          <div class="footer__boxx d-flex flex-wrap justify-content-center justify-content-xl-between">
           <a href="tel:99-819-75-20" class="footer__box-link">(99) 819-75-20</a>
-          <a href="mailto:ismoilkabulov2@gmail.com" class="footer__box-link">Ismaoil Kabulov @gmail.com</a>
+          <a href="mailto:ismoilkabulov2@gmail.com" class="footer__box-link">Ismoil Kabulov @gmail.com</a>
         </div>
          </div>
        </div>
